--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">Aukdeliver</string>
     <string name="title_activity_lista_de_pedidos">ListaDePedidos</string>
     <string name="title_activity_mapa_cliente_por_llamada">Map</string>
+    <string name="aukde_value">\@Aukde</string>
+    <string name="title_activity_map_client">Map</string>
 
 </resources>
